update wk1 presentations 01 and 02

--- a/week1/02_history_of_dataviz.html
+++ b/week1/02_history_of_dataviz.html
@@ -12,7 +12,7 @@
 
   <meta name="author" content="Jeremy Mikecz">
   <meta name="dcterms.date" content="2025-12-31">
-  <title>Introduction to Data Visualization</title>
+  <title>History of Data Visualization</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -328,8 +328,8 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="hds_images/history-of-dataviz/DuBois.png" data-background-opacity="0.3" data-background-size="contain" class="quarto-title-block center">
-  <h1 class="title">Introduction to Data Visualization</h1>
+<section id="title-slide" data-background-image="../hds_images/history-of-dataviz/DuBois.png" data-background-opacity="0.3" data-background-size="contain" class="quarto-title-block center">
+  <h1 class="title">History of Data Visualization</h1>
   <p class="subtitle">From Data Exploration to Communication &amp; Storytelling</p>
 
 <div class="quarto-title-authors">
@@ -352,30 +352,47 @@ Jeremy Mikecz
 </section>
 <section id="goals" class="slide level2">
 <h2>Goals</h2>
+</section>
+<section id="flatten-the-curve-first-visualized-global-crisis" class="slide level2">
+<h2>“Flatten the Curve”: First Visualized Global Crisis</h2>
+
+<img data-src="images/COVID_flatten-the-curve-01.jpg" alt="two area graphs: one steep showing the impacts of COVID-19 if not precautionary measures are taken and the other, with a flatter slope, showing how following pre-cautionary measures will prevent hospitals from being overwhelmed." class="r-stretch quarto-figure-center"><p class="caption">COVID-19 Flatten the Curve graphic</p></section>
+<section id="section" class="slide level2">
+<h2></h2>
 </section></section>
-<section id="why-data-viz" class="title-slide slide level1 center">
-<h1>Why Data Viz?</h1>
-<!--COVID - first visualized disaster?-->
-<!--CLIMATE CHANGE - hockey stick graphic-->
-<!--ELECTION MAPS, GRAPHS, NYT NEEDLE-->
-<!--NOT ALL DATA VIZ SCARY, SOME CAN BE FUN-->
-<!--UBIQUITOUS USE - DAILY EXAMPLES - RESTAURANT - HOW BUSY; OTHERS??-->
-</section>
-
-<section id="data-viz-the-course" class="title-slide slide level1 center">
-<h1>Data Viz: The Course</h1>
+<section>
+<section id="data-visualization-public-health" class="title-slide slide level1 center">
+<h1>Data Visualization &amp; Public Health</h1>
 
 </section>
+<section id="john-snow" class="slide level2">
+<h2>John Snow</h2>
+</section>
+<section id="florence-nightingale" class="slide level2">
+<h2>Florence Nightingale</h2>
+</section>
+<section id="influenza-epidemic" class="slide level2">
+<h2>1918 Influenza Epidemic</h2>
+</section></section>
+<section>
+<section id="origins-of-modern-data-visualization" class="title-slide slide level1 center">
+<h1>Origins of Modern Data Visualization</h1>
 
-<section id="data-viz-the-practice" class="title-slide slide level1 center">
-<h1>Data Viz: The Practice</h1>
+</section>
+<section id="pre-modern-maps" class="slide level2">
+<h2>Pre-Modern Maps</h2>
+</section>
+<section id="a-data-visualization-of-data-visualization-history" class="slide level2">
+<h2>A Data Visualization of Data Visualization History</h2>
+<p><img data-src="images/Andrews_MapOfFirsts.png"></p>
+<p>Essay with accompanying interactive graphic: RJ Andrews, <a href="https://infowetrust.com/project/history-essay">“Interacting with History: 300 years of information graphic milestones”</a> (2017).</p>
 <div class="quarto-auto-generated-content">
 <p><img src="../hds_images/logo_white.png" class="slide-logo"></p>
 <div class="footer footer-default">
 
 </div>
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
