re-render week1/pres/01

--- a/week1/presentations/01_intro_to_dataviz.html
+++ b/week1/presentations/01_intro_to_dataviz.html
@@ -454,15 +454,29 @@ Jeremy Mikecz
 <section id="dear-data" class="slide level2 scrollable">
 <h2>Dear Data</h2>
 <p><img data-src="images/dear-data_week-of-laughter1.jpeg" class="scrollable"></p>
+<p>Giorgia Lupi and Stefanie Posavec, <a href="https://www.dear-data.com/theproject">*Dear Data*</a> (Princeton: Princeton Architectural Press, 2016).</p>
 <!--UBIQUITOUS USE - DAILY EXAMPLES - RESTAURANT - HOW BUSY; OTHERS??-->
 </section></section>
 <section id="data-viz-the-course" class="title-slide slide level1 center">
 <h1>Data Viz: The Course</h1>
-
+<!--overview of course-->
 </section>
 
 <section id="data-viz-the-practice" class="title-slide slide level1 center">
 <h1>Data Viz: The Practice</h1>
+<!--the practice of data visualization-->
+<ol type="1">
+<li>Begin with data and a question</li>
+<li>Many of the best visualizations start with pencil, paper, and an idea</li>
+<li>Conduct <strong>exploratory data analysis &amp; visualization</strong> to explore hidden patterns in your data</li>
+<li>Perform other types of analysis (statistical, textual, qualitative, etc.)</li>
+<li>Prepare visualizations to help you convey your findings (and to allow others to explore the data)
+<ol type="1">
+<li>think about what visual variables (location, color, size, shape, transparency, etc.) best represent your data variables.</li>
+<li>consider your purpose (are you trying to persuade? or let the viewer come to their own conclusions?)</li>
+<li>consider your audience</li>
+</ol></li>
+</ol>
 <div class="quarto-auto-generated-content">
 <p><img src="../hds_images/logo_white.png" class="slide-logo"></p>
 <div class="footer footer-default">
