rename a few nbs and update README with proper schedule and links to each notebook

--- a/README.html
+++ b/README.html
@@ -359,28 +359,41 @@ perform data analysis and visualization using R.</p>
 <p>Created by:</p>
 <p>Jeremy Mikecz, Research Data Services (Dartmouth Libraries)</p>
 <p>Steve Gaughan, Research Data Services (Dartmouth Libraries)</p>
-<div id="materials-to-develop-spring-2025" class="section level2">
-<h2>Materials to develop (Spring 2025)</h2>
-<p><em><strong>Tentative Name of Lesson</strong> (type of materials -
-main R libraries)</em></p>
+<div id="schedule-spring-2025" class="section level2">
+<h2>Schedule (Spring 2025)</h2>
+<p><em><strong>Name of Lesson</strong> (type of materials - main R
+libraries)</em></p>
+<div id="day-1" class="section level3">
+<h3>Day 1</h3>
+<p><strong>Welcome</strong> (see )</p>
 <ol style="list-style-type: decimal">
-<li><p><strong>Intro to R / R Studio</strong> (?)</p></li>
+<li><p><strong>Intro to R / R Studio</strong> (tutorial, see <a href="notebooks/00_getting-started-with-R.qmd">notebook 00</a> - R
+Studio + base R)</p></li>
 <li><p><strong>Intro to Data Wrangling with tidyverse / dplyr</strong>
-(notebooks - tidyverse / dplyr)</p></li>
-<li><p><strong>Exploratory Data Visualization</strong> (notebooks -
-ggplot)</p></li>
-<li><p><strong>Summary and Descriptive Statistics</strong> (notebooks -
-?)<br />
-</p></li>
-<li><p><strong>Mind the Gap: Creating Custom Visualizations</strong>
-(notebooks - ggplot and plotly)</p></li>
-<li><p><strong>Statistics</strong> (notebooks - ?)</p>
-<ul>
-<li>also point to resources like Swirlstats</li>
-</ul></li>
-<li><p><strong>Mapping and Geospatial Analysis</strong> (notebooks -
-geopandas? + ?)</p></li>
+(notebooks <a href="notebooks/01_get_summary_data.qmd">01</a>-<a href="notebooks/02_intro_to_tidyverse2.qmd">02</a> - tidyverse /
+dplyr)</p></li>
+<li><p><strong>Exploratory Data Visualization</strong> (notebooks <a href="notebooks/03a_intro-to-ggplot_mammal-sleep.qmd">03a</a>, <a href="notebooks/03b_intro-to-ggplot_titanic.qmd">03b</a>, and <a href="notebooks/03c_ggplot-weatherdata.qmd">03c</a> - ggplot)</p></li>
+<li><p><strong>Intro to Stats with R, Part 1</strong> (<a href="notebooks/4_basic_R_stats_t_test_quartodoc.qmd">notebook 04</a> -
+dplyr)</p></li>
+<li><p><strong>Takeaways &amp; Questions</strong></p></li>
 </ol>
+</div>
+<div id="day-2" class="section level3">
+<h3>Day 2</h3>
+<ol start="5" style="list-style-type: decimal">
+<li><p><strong>Intro to Stats with R, Part 2</strong> (<a href="notebooks/5_r_swirl_stats_demo_quarto.qmd">notebook 5</a> - dplyr,
+tidyr, swirl)</p>
+<ul>
+<li>Swirlstats demo</li>
+</ul></li>
+<li><p><strong>Mind the Gap: Creating Custom Visualizations</strong>
+(notebooks <a href="notebooks/06a_gapminder_viz.qmd">06a</a>-<a href="notebooks/06b_gapminder_interactive-viz.qmd">06b</a> - ggplot and
+plotly)</p></li>
+<li><p><strong>Geospatial Analysis and Mapping</strong> (<a href="notebooks/8_spatial_data_science_and_analysis_quartodoc.qmd">notebook
+8</a> - many)</p></li>
+<li><p><strong>Next Steps, Takeaways, &amp; Feedback</strong></p></li>
+</ol>
+</div>
 </div>
 </div>
 
